[UPDATE] 카카오페이 결제 코드변경

--- a/.gitignore
+++ b/.gitignore
@@ -141,5 +141,5 @@ $RECYCLE.BIN/
 *.lnk
 
 *.cld
-*.md
+README.md
 # End of https://www.toptal.com/developers/gitignore/api/maven,java,eclipse,windows
